# amax.contracts

./: CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  README.md  docs.json  pipeline.jsonc
docker/: buildContracts.sh  environment.dockerpart  unit-test.sh  verifyInstallation.sh
docs/: 03_build-and-deploy.md  index.md
docs/01_key-concepts/: 01_system.md  02_ram.md  03_cpu.md  04_net.md  05_stake.md  06_vote.md
docs/04_guides/: 01_upgrading-the-amax.system-contract.md  02_how-to-buy-ram.md  03_how-to-stake.md  04_how-to-vote.md  05_how-to-create-issue-and-transfer-a-token.md  06_how-to-sign-a-multisig-transaction-with-amax.msig.md  07_how-to-use-amax.wrap.md  08_configure-use-powerup-resource-model.md
scripts/: .environment  get_planreceiver_key.sh  set_cpu_usage.sh
src_mining/: CMakeLists.txt  build.sh
src_mining/contracts/: CMakeLists.txt
src_mining/contracts/amax.ido/: CMakeLists.txt
src_mining/contracts/amax.ido/include/: amax_ido.db.hpp  amax_ido.hpp  utils.hpp
src_mining/contracts/amax.ido/ricardian/: amax_ido.contracts.md.in
src_mining/contracts/amax.ido/src/: amax_ido.cpp
src_mining/contracts/amax.one/: CMakeLists.txt
src_mining/contracts/amax.one/include/: amax.token.hpp  amax_one.db.hpp  amax_one.hpp
src_mining/contracts/amax.one/ricardian/: amax_one.contracts.md.in
src_mining/contracts/amax.one/src/: amax_one.cpp
src_mining/contracts/amax.two/: CMakeLists.txt
src_mining/contracts/amax.two/include/: amax_two.db.hpp  amax_two.hpp  (+1 more)
src_mining/tests/: CMakeLists.txt
src_system/: CMakeLists.txt  build.sh
src_system/cmake/: GitUtils.cmake
src_system/contracts/: CMakeLists.txt
src_system/contracts/amax.bios/: CMakeLists.txt
src_system/contracts/amax.msig/: CMakeLists.txt
src_system/contracts/amax.reward/: CMakeLists.txt
src_system/contracts/amax.system/: CMakeLists.txt
src_system/contracts/amax.system/include/amax.system/: amax.system.hpp  exchange_state.hpp  native.hpp  producer_change.hpp
src_system/contracts/amax.system/ricardian/: amax.system.clauses.md.in  amax.system.contracts.md.in
src_system/contracts/amax.system/src/: amax.system.cpp  delegate_bandwidth.cpp  exchange_state.cpp  name_bidding.cpp  native.cpp  powerup.cpp  powerup.results.cpp  producer_pay.cpp  rex.cpp  rex.results.cpp  voting.cpp
src_system/contracts/amax.token/: CMakeLists.txt
src_system/contracts/amax.token/include/amax.degov/: degov.hpp
src_system/contracts/amax.token/include/amax.token/: amax.token.hpp
src_system/contracts/amax.token/src/: amax.token.cpp
src_system/contracts/amax.wrap/: CMakeLists.txt
src_system/tests/: CMakeLists.txt  amax.custody_tests.cpp  amax.msig_tests.cpp  amax.powerup_tests.cpp  amax.producer_change_tests.cpp  amax.system_tester.hpp  amax.system_tests.cpp  amax.token_tests.cpp  amax.wrap_tests.cpp  amax.xtoken_tests.cpp  contracts.hpp.in  main.cpp  test_symbol.hpp
src_system/tests/test_contracts/: CMakeLists.txt  reject_all.wasm
src_system/tests/test_contracts/multi_token_deposit/: CMakeLists.txt
src_system/tests/test_contracts/multi_token_deposit/include/multi_token_deposit/: multi_token_deposit.hpp
src_system/tests/test_contracts/multi_token_deposit/src/: multi_token_deposit.cpp
src_system/tests/test_contracts/system_test/: CMakeLists.txt
src_system/tests/test_contracts/system_test/include/system_test/: system_test.hpp
src_system/tests/test_contracts/system_test/src/: system_test.cpp
src_system/tests/test_contracts/token_test/: CMakeLists.txt  token_test.cpp  token_test.hpp
src_system/tests/test_contracts/xtoken_deposit/: CMakeLists.txt
src_system/tests/test_contracts/xtoken_deposit/include/xtoken_deposit/: xtoken_deposit.hpp
src_system/tests/test_contracts/xtoken_deposit/src/: xtoken_deposit.cpp
src_system/tools/init.amax.system/: init.amax.system.py  run.example.sh
src_system/version/: VersionUtils.cmake
(+11 files in other folders)
